--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/ssesayjr/member-area/issues"
   },
-  "homepage": "https://github.com/ssesayjr/member-area#readme"
+  "homepage": "https://github.com/ssesayjr/member-area#readme",
+  "dependencies": {
+    "@actions/core": "^1.10.0",
+    "@actions/github": "^5.1.1"
+  }
 }
