--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,17 +1,11 @@
-name: service-worker-push
-'on':
-
-    push:
-      branches:
-        - service-worker
-    build: 
-      runs-on: ubuntu-latest
-      containter: node:16
-      steps: 
-        - run: node --version
-        - run: npm --version
-        - uses: actions/checkout@v3
-        - run: npm install 
-        - run: npm install node
-        - run: npm ci && npm run build
-        - run: node service-worker.js
+on: push 
+jobs: 
+  build-node: 
+    runs-on: ubuntu-latest
+    containter: node:16
+    steps: 
+      - run: node --version
+      - run: npm --version
+      - uses: actions/checkout@v3
+      - run: npm install
+      - run: node service-worker.js
