--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,4 +8,5 @@ jobs:
       - run: npm --version
       - uses: actions/checkout@v3
       - run: npm install
-      - run: node service-worker.js
+      - run: npm install node
+      - run: node service-worker-registration.js
