--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "member-area",
   "version": "1.0.0",
   "description": "",
-  "main": "service-worker.js",
+  "main": "service-worker-registration.js",
   "directories": {
     "lib": "lib"
   },
@@ -23,5 +23,11 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "eslint": "^8.32.0",
+    "eslint-plugin-vue": "^9.9.0"
   }
 }
