--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "service-worker-registration.js",
+  "env": {
+    "browser": true,
+    "node": true
+},
   "directories": {
     "lib": "lib"
   },
@@ -32,7 +36,8 @@
   },
   "eslintConfig": {
     "globals": {
-      "window": true
+      "window": true,
+      "node" : true
     }
   }
 }
