--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,4 +9,4 @@ jobs:
       - uses: actions/checkout@v3
       - run: npm install
       - run: npm install node
-      - run: site.webmanifest
+      - run: node site.webmanifest
