--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "member-area",
   "version": "1.0.0",
   "description": "",
-  "main": "site.webmanifest",
+  "main": "index.html",
   "env": {
     "browser": true,
     "node": true
@@ -11,7 +11,8 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1", 
+    "start": "service-worker.js"
   },
   "repository": {
     "type": "git",
