--- a/.gitignore
+++ b/.gitignore
@@ -66,7 +66,10 @@ node_modules/
 .env
 
 # #package lock file 
-package-lock.json
+#package-lock.json
 
 # #node modules 
-./node_modules
+#./node_modules
+
+./functions
+
