--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^10.0.2",
+    "firebase-admin": "^11.5.0",
     "firebase-functions": "^3.18.0"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-plugin-react": "^7.32.1",
     "firebase-functions-test": "^0.2.0"
   },
   "private": true
