--- a/public/package.json
+++ b/public/package.json
@@ -33,15 +33,8 @@
     
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.49.0",
-    "@typescript-eslint/parser": "^5.49.0",
-    "eslint": "^8.32.0",
-    "eslint-plugin-vue": "^9.9.0"
-  },
-  "eslintConfig": {
-    "globals": {
-      "window": true,
-      "node": true
-    }
+
+    "firebase": "^9.0.0"
+
   }
 }
