--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^11.5.0",
-    "firebase-functions": "^3.18.0"
+    "firebase-functions": "^3.18.0",
+    "webpack": "^5.75.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
