--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "firebase-admin": "^11.5.0",
     "firebase-functions": "^3.18.0",
+    "react": "^18.2.0",
     "webpack": "^5.75.0"
   },
   "devDependencies": {
