--- a/public/package.json
+++ b/public/package.json
@@ -11,9 +11,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "service-worker.js"
-
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -23,9 +21,9 @@
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ssesayjr/member-area/issues"
+    "url": "https://github.com/ssesayjr/member-area/public/index.html"
   },
-  "homepage": "https://github.com/ssesayjr/member-area#readme",
+  "homepage": "https://github.com/ssesayjr/member-area/public/index.html",
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
